Closed
Bug 1223232
Opened 10 years ago
Closed 10 years ago
"ASSERTION: inline-size less than zero: 'aContainingBlockISize >= 0'"
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla45
| Tracking | Status | |
|---|---|---|
| firefox45 | --- | fixed |
People
(Reporter: jruderman, Assigned: MatsPalmgren_bugz)
References
Details
(Keywords: assertion, testcase)
Attachments
(4 files)
|
175 bytes,
text/html
|
Details | |
|
17.56 KB,
text/plain
|
Details | |
|
1.72 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
|
969 bytes,
patch
|
Details | Diff | Splinter Review |
###!!! ASSERTION: inline-size less than zero: 'aContainingBlockISize >= 0', file layout/base/nsLayoutUtils.cpp, line 4935
Note: bug 1153759 has another "inline-size less than zero" assertion with a different condition.
| Reporter | ||
Comment 1•10 years ago
|
||
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → mats
| Assignee | ||
Comment 2•10 years ago
|
||
aDesiredSize is 0,0. It's a table-row frame with 'border-style: dotted'
which makes the computed border non-zero, hence the negative CB size.
But nsTableRowFrame overrides GetUsedBorder():
http://mxr.mozilla.org/mozilla-central/source/layout/tables/nsTableRowFrame.cpp#271
so I think that's what we want to use here.
Attachment #8685985 -
Flags: review?(roc)
| Assignee | ||
Comment 3•10 years ago
|
||
Attachment #8685985 -
Flags: review?(roc) → review+
| Assignee | ||
Updated•10 years ago
|
Flags: in-testsuite+
Comment 5•10 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/5e5a5420f0e1
https://hg.mozilla.org/mozilla-central/rev/81e5c1bef9e3
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
Depends on: 1225005
You need to log in
before you can comment on or make changes to this bug.
Description
•