Bug 1223232 - Use GetUsedBorder() instead of the computed border value when calculating CB size.  r=roc